# pulse-pro

./: .clang-format  .gitignore  CMakeLists.txt  README.md  REUSE.toml
.github/: copilot-instructions.md
cmake/: SetupQt.cmake
src/: captureengine.cpp  captureengine.hpp  macoswindowutils.h  macoswindowutils.mm  main.cpp  mainwindow.cpp  mainwindow.hpp  regionselectionoverlay.cpp  regionselectionoverlay.hpp  screencapturepreview.cpp  screencapturepreview.hpp  screenlistmodel.cpp  screenlistmodel.hpp  windowlistmodel.cpp  windowlistmodel.hpp  windowutil.cpp  windowutil.hpp  windowutil.mm
tests/: CMakeLists.txt  main.cpp  regionselectionoverlay_test.cpp  regionselectionoverlay_test.hpp  screenlistmodel_test.cpp  screenlistmodel_test.hpp  windowlistmodel_test.cpp  windowlistmodel_test.hpp
